force-app/main/default/objects/Property_Assessments_District360__c/Property_Assessments_District360__c.object-meta.xml
<CustomObject>
    <description>Each property&apos;s assessment is captured as often as they are assessed (annually, bi-annually, etc.). By capturing property assessments individually, the District can tell the economic development story of the Properties in their District over time.</description>
    <label>Assessments</label>
    <nameField>
        <displayFormat>PA-{0000}</displayFormat>
        <label>Property Assessment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>