force-app/main/default/objects/Property_Assessments_District360__c/fields/Assessment_Year_District360__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Year_District360__c</fullName>
    <label>Assessment Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>