force-app/main/default/objects/Property_Assessments_District360__c/fields/Improvement_Assessment_District360__c.field-meta.xml
<CustomField>
    <fullName>Improvement_Assessment_District360__c</fullName>
    <label>Building/Improvement Assessment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>