force-app/main/default/objects/Property_Assessments_District360__c/fields/Property_Name_District360__c.field-meta.xml
<CustomField>
    <fullName>Property_Name_District360__c</fullName>
    <label>Property Name</label>
    <referenceTo>Property_District360__c</referenceTo>
    <relationshipLabel>Assessments</relationshipLabel>
    <relationshipName>Property_Assessments_District360</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>