force-app/main/default/objects/Property_Assessments_District360__c/fields/Total_Assessed_Value_District360__c.field-meta.xml
<CustomField>
    <fullName>Total_Assessed_Value_District360__c</fullName>
    <label>Total Assessed Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>