force-app/main/default/objects/Property_Assessments_District360__c/validationRules/Assessment_Year_District360.validationRule-meta.xml
<ValidationRule>
    <fullName>Assessment_Year_District360</fullName>
    <active>true</active>
    <description>Assessment year field should have only 4 digits as follows &quot;YYYY&quot;</description>
    <errorConditionFormula>OR(
  NOT(LEN(Assessment_Year_District360__c ) &lt; 8),
  AND(
       REGEX(Assessment_Year_District360__c ,&quot;[^=,&lt;.&gt;/?~`]&quot;)
  )
)</errorConditionFormula>
    <errorDisplayField>Assessment_Year_District360__c</errorDisplayField>
    <errorMessage>It contain alphanumeric characters. Ex: 2019/20</errorMessage>
</ValidationRule>